Added daf integration still draft
