# daf-openapi.yaml
@@ -1,3 +1,21 @@
+x-commons:
+  ratelimit-headers: &ratelimit-headers
+    X-RateLimit-Limit:
+      $ref: '#/components/headers/X-RateLimit-Limit'
+    X-RateLimit-Remaining:
+      $ref: '#/components/headers/X-RateLimit-Remaining'
+    X-RateLimit-Reset:
+      $ref: '#/components/headers/X-RateLimit-Reset'
+  common-responses: &common-responses
+    '400':
+      $ref: '#/components/responses/400BadRequest'
+    '429':
+      $ref: '#/components/responses/429TooManyRequests'
+    '503':
+      $ref: '#/components/responses/503ServiceUnavailable'
+    default:
+      $ref: '#/components/responses/default'
+
 openapi: 3.0.0
 info:
   title: Pdnd API
@@ -16,28 +34,12 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-  - url: http://localhost:8080
+  - description: Development server
+    url: http://localhost:8080/pdnd-openapi
+  - description: Test server
+    url: https://api.daf.teamdigitale.it/pdnd-openapi
 paths:
-  /auth/{user_id}:
-    get:
-      summary: Return JWT token
-      operationId: app.generate_token
-      parameters:
-      - name: user_id
-        description: User unique identifier
-        in: path
-        required: true
-        example: 12
-        schema:
-          type: integer
-      responses:
-        '200':
-          description: JWT token
-          content:
-            'text/plain':
-              schema:
-                type: string
-  /token:
+  /jwt:
     get:
       description: |
         Return JWT token
@@ -45,6 +47,7 @@ paths:
       security:
         - basic: []
       responses:
+        <<: *common-responses
         '200':
           content:
             'text/plain':
@@ -53,156 +56,114 @@ paths:
           description: |
             JWT token.
           headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/X-RateLimit-Limit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/X-RateLimit-Remaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/X-RateLimit-Reset'
-        '400':
-          $ref: '#/components/responses/400BadRequest'
-        '429':
-          $ref: '#/components/responses/429TooManyRequests'
-        '503':
-          $ref: '#/components/responses/503ServiceUnavailable'
-        default:
-          $ref: '#/components/responses/default'
-      summary: Ritorna un timestamp in formato RFC5424.
+            <<: *ratelimit-headers
+      summary: Return pdnd jwt token
       tags:
-      - public
+      - Login
+  /public/search:
+    post:
+      description: |
+        Return JWT token
+      operationId: app.public_data_search
+      security:
+        - jwt: []
+      requestBody:
+          content:
+            application/json:
+              schema:
+                 x-body-name: filters
+                 $ref: '#/components/schemas/Filters'
+          #description: filter to use in search
+          #required: true
+      responses:
+        <<: *common-responses
+        '200':
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SearchResult'
+          description: |
+            JWT token.
+          headers:
+            <<: *ratelimit-headers
+      summary: Return pdnd jwt token
+      tags:
+      - Login
 components:
   securitySchemes:
     jwt:
       type: http
       scheme: bearer
       bearerFormat: JWT
+      x-bearerInfoFunc: app.forward_token
     basic:
       type: http
       scheme: basic
       x-basicInfoFunc: app.basic_auth
   headers:
-    Retry-After:
-      description: |-
-        Retry contacting the endpoint *at least* after seconds.
-        See https://tools.ietf.org/html/rfc7231#section-7.1.3
-      schema:
-        format: int32
-        type: integer
     X-RateLimit-Limit:
-      description: The number of allowed requests in the current period
-      schema:
-        format: int32
-        type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/headers/v3.yaml#/X-RateLimit-Limit'
     X-RateLimit-Remaining:
-      description: The number of remaining requests in the current period
-      schema:
-        format: int32
-        type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/headers/v3.yaml#/X-RateLimit-Remaining'
     X-RateLimit-Reset:
-      description: The number of seconds left in the current period
-      schema:
-        format: int32
-        type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/headers/v3.yaml#/X-RateLimit-Reset'
+    Retry-After:
+      $ref: 'https://teamdigitale.github.io/openapi/headers/v3.yaml#/Retry-After'
+
   responses:
+    # Predefined error codes for this API
     400BadRequest:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Bad Request
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/400BadRequest'
     404NotFound:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Not Found
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/404NotFound'
     429TooManyRequests:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Too many requests
-      headers:
-        Retry-After:
-          description: |-
-            Retry contacting the endpoint *at least* after seconds.
-            See https://tools.ietf.org/html/rfc7231#section-7.1.3
-          schema:
-            format: int32
-            type: integer
-        X-RateLimit-Limit:
-          description: The number of allowed requests in the current period
-          schema:
-            format: int32
-            type: integer
-        X-RateLimit-Remaining:
-          description: The number of remaining requests in the current period
-          schema:
-            format: int32
-            type: integer
-        X-RateLimit-Reset:
-          description: The number of seconds left in the current period
-          schema:
-            format: int32
-            type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/429TooManyRequests'
     503ServiceUnavailable:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Service Unavailable
-      headers:
-        Retry-After:
-          description: |-
-            Retry contacting the endpoint *at least* after seconds.
-            See https://tools.ietf.org/html/rfc7231#section-7.1.3
-          schema:
-            format: int32
-            type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/503ServiceUnavailable'
     default:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Unexpected error
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/default'
   schemas:
-    Problem:
+    Filters:
+      type: object
       properties:
-        detail:
-          description: |
-            A human readable explanation specific to this occurrence of the
-            problem.
-          example: Connection to database timed out
+        text:
           type: string
-        instance:
-          description: |
-            An absolute URI that identifies the specific occurrence of the problem.
-            It may or may not yield further information if dereferenced.
-          format: uri
+        index:
+          type: array
+          items:
+            type: string
+        org:
+          type: array
+          items:
+            type: string
+        theme:
+          type: array
+          items:
+            type: string
+        date:
           type: string
         status:
-          description: |
-            The HTTP status code generated by the origin server for this occurrence
-            of the problem.
-          example: 503
-          exclusiveMaximum: true
-          format: int32
-          maximum: 600
-          minimum: 100
-          type: integer
-        title:
-          description: |
-            A short, summary of the problem type. Written in english and readable
-            for engineers (usually not suited for non technical stakeholders and
-            not localized); example: Service Unavailable
+          type: array
+          items:
+            type: string
+        owner:
           type: string
-        type:
-          default: about:blank
-          description: |
-            An absolute URI that identifies the problem type.  When dereferenced,
-            it SHOULD provide human-readable documentation for the problem type
-            (e.g., using HTML).
-          example: https://tools.ietf.org/html/rfc7231#section-6.6.4
-          format: uri
+        order:
           type: string
+        sharedWithMe:
+          type: boolean
+    SearchResult:
       type: object
+      properties:
+        type:
+          type: string
+          description: type of the source
+        source:
+          type: string
+          description: the source
+        match:
+          type: string
+          description: the match result
+    
